update lib